[tool.poetry]
name = "atpd-tdd-leap-years"
version = "0.1.0"
description = ""
authors = ["christian <c_vetter@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
